# ANOI

./: .gitignore  CMakeLists.txt  README.md
cv01/: CMakeLists.txt  main.cpp
cv02/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp  object.cpp  object.h  pch.h
cv03/: CMakeLists.txt  classifier.cpp  classifier.h  colors.h  main.cpp  object.cpp  object.h  trainedfeatures.cpp  trainedfeatures.h
cv04/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp  objectclass.cpp  objectclass.h  pch.h
cv05/: CMakeLists.txt  backprop.cpp  backprop.h  cli.h  main.cpp  pch.h  utils.cpp  utils.h
cv06/: CMakeLists.txt  backprop.cpp  backprop.h  classifier.cpp  classifier.h  cli.h  main.cpp  object.cpp  object.h  objectclass.cpp  objectclass.h  pch.h
cv07/: cv07-back-propagation-neural-network.py
cv08/: cv08-mnist-number-detection.py
template/: CMakeLists.txt  pch.cpp
