CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(DZO2019)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

# Where to find CMake modules and OpenCV
SET(OpenCV_DIR "C:/opencv-4.1.1/mingw-build/install_release")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
INCLUDE(MacroOpenCV)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_SUBDIRECTORY(cv01)
#ADD_SUBDIRECTORY(cv02)
#ADD_SUBDIRECTORY(cv03)
#ADD_SUBDIRECTORY(cv04)
#ADD_SUBDIRECTORY(cv05)
#ADD_SUBDIRECTORY(cv06)
#ADD_SUBDIRECTORY(cv07)
#ADD_SUBDIRECTORY(cv08)
#ADD_SUBDIRECTORY(cv09)
#ADD_SUBDIRECTORY(cv10)
#ADD_SUBDIRECTORY(cv11)
#ADD_SUBDIRECTORY(cv12)
#ADD_SUBDIRECTORY(cv13)
ADD_SUBDIRECTORY(template)

FILE(COPY images DESTINATION ${CMAKE_BINARY_DIR})